- Added the DokuPBR pack. - Set the color scheme to dark to fix the bright scrollbar.

--- a/css/base.css
+++ b/css/base.css
@@ -1,3 +1,7 @@
+:root {
+  color-scheme: dark;
+}
+
 * {
   margin: 0px;
   padding: 0px;
